# Rope-Pulling-Game-Simulation-In-C

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.txt
.github/workflows/: cmake-single-platform.yml
include/: common.h  config.h  file.h  game.h  message.h  player.h  player_utils.h  random.h  referee.h  referee_orders.h
src/: game.c  main.c  main_temp.c  player.c  referee.c
src/graphics/: main_graphics.c
src/include/: player.h
src/utils/: config.c  file.c  player_utils.c  random.c  referee_orders.c
